--- a/pronounciation.html
+++ b/pronounciation.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pengucapan</title>
-    <link rel="stylesheet" href="pengucapan.css">
+    <title>Pronounciation</title>
+    <link rel="stylesheet" href="pronounciation.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
             <a class="navbarPaddingLeft" href="index.html">Home        </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
