--- a/vocab.html
+++ b/vocab.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kosakata</title>
-    <link rel="stylesheet" href="kosakata.css">
+    <title>Vocabulary</title>
+    <link rel="stylesheet" href="vocab.css">
 </head>
 <body>
     <header>
@@ -24,15 +24,15 @@
         </p>
     </header>
 
-    <!--  ===== Pilih Level HSK =====  -->
-    <p class="fontBlack" id="apasihHSK">Apasih HSK Itu...?</p>
+    <!--  ===== Level HSK =====  -->
+    <p class="fontBlack" id="apasihHSK">What is HSK...?</p>
     <img class="hskBook" src="Pictures/hskBook.jpg" alt="">
     <img id="hskImg" src="Pictures/HSK-logo.jpg" width="400px" alt="">
-    <p class="fontGrey">HSK yaitu singkatan dari Hanyu Shuiping Kaoshi merupakan standar ujian kecakapan bahasa mandarin yang terdiri dari 6 level, dari HSK level 1 sampai level 6.
+    <p class="fontGrey">HSK, which stands for Hanyu Shuiping Kaoshi, is a standard Chinese language proficiency test which consists of 6 levels, from HSK level 1 to level 6.
     
-        HSK 1 merupakan HSK paling dasar dimana materinya tentang pengenalan bahasa mandarin, pelafalan, nada dan penulisan huruf dasar hanzi. Dan terdiri dari 150 kosakata.
+        HSK 1 is the most basic HSK where the material is about introducing Mandarin, pronunciation, tones and writing basic Hanzi letters. It consists of 150 vocabularies.
         
-        Tes HSK 1 terdiri dari soal listening dan reading dengan total  40 soal dan harus dikerjakan selama 35 menit. Soalnya terdiri dari hanzi dan pinyin.</p>
+        The HSK 1 test consists of listening and reading questions with a total of 40 questions and must be done in 35 minutes. The problem consists of hanzi and pinyin.</p>
     <p id="HSK1_"> Pilih Kosakata Berdasarkan Level HSK</p>
 
 <div id="divHSK123">
