--- a/words_with_tai.html
+++ b/words_with_tai.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="kataBendaDenganShi.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="words_with_tai.css">
 </head>
 <body>
 
@@ -28,27 +28,25 @@
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
 <p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
-<img id="background" src="Pictures/Tata Bahasa Background.jpg" alt="">
+<img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-<p class="fontBlack" id="menghubungkanKata">Menghubungkan kata benda dengan 是 (shì)</p>
-<p class="fontGrey" id="shiMerupakan">是 | shì merupakan kata kerja dan dipergunakan untuk 
-menghubungkan dua kata benda, dalam bahasa Indonesia 
-sering diterjemahkan sebagai adalah.</p>
+    <p class="fontBlack" id="mengekspresikan"><strong>Mengekspresikan terlalu atau sangat dengan 太 (tài)</strong></p>
+    <p class="fontGrey" id="dalamBahasa">Dalam bahasa mandarin, cara yang paling sederhana untuk mengekspresikan 
+        hal yang secara belebih-lebihan atau biasa disebut dengan kata "terlalu"
+         adalah dengan menggunakan kata 太 (tài). Perhatikan jangan lupa juga 
+         untuk menambahkan kata 了 (le) setelah kata sifat, hal ini bertujuan
+          untuk menjaga agar pengucapan bahasa mandarin terasa lebih alami.</p>
+    
+    <p class="fontBlack"><strong>Struktur</strong></p>
+    <div class="Struktur"><p class="fontBlack">太 + Adj. + 了</p></div>
+    <p class="fontBlack"><strong>Contoh</strong></p>
+    <ul>
+        <li class="fontGrey" >米饭太多了 <br> mǐfàn tài duō le <br> Nasinya terlalu banyak </li> <br>
+        <li class="fontGrey" >现在太晚了 <br> xiànzài tài wǎn le <br> Sekarang sudah terlalu malam </li> <br>
+        <li class="fontGrey" >老板太忙了 <br> lǎobǎn tài máng le <br> Si Boss terlalu sibuk </li> <br>
+        <li class="fontGrey" > 这个厕所太脏了 <br> zhege cèsuǒ tài zāng le <br> Toilet ini sangat kotor </li> <br> 
+    </ul>
 
-<p class="fontBlack"><strong>Struktur</strong></p>
-<div class="Struktur"><p class="fontBlack" id="pola1"> Kata Benda 1 + 是 + Kata Benda 2</p></div>
-<p class="fontBlack"><strong>Contoh</strong></p>
-<ul>
-    <li class="fontGrey" >我是学生。 <br> wǒ shì xuéshēng <br> Saya seorang pelajar </li>
-    <br>
-    <li class="fontGrey" >他们是有钱人。 <br> tāmen shì yǒu qián rén <br> Mereka adalah orang kaya. </li>
-    <br>
-    <li class="fontGrey" >您是老师吗？ <br> nín shì lǎoshī ma <br>  Apakah anda seorang guru ? </li>
-    <br>
-    <li class="fontGrey" >这都是你的钱。 <br> zhe dōu shì nǐ de qián  <br> Ini semua adalah uangmu. </li>
-    <br>
-    <li class="fontGrey" >我也是他的朋友。 <br> wǒ yě shì nǐ de péngyou <br> Saya juga teman dia. </li>
-</ul>
 
     <!-- ===== Footer ===== -->
 
