--- a/adjective_noun.html
+++ b/adjective_noun.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="berlebihanDenganTai.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="adjective_noun.css">
 </head>
 <body>
 
@@ -28,25 +28,29 @@
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
 <p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
-<img id="background" src="Pictures/Tata Bahasa Background.jpg" alt="">
+<img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-    <p class="fontBlack" id="mengekspresikan"><strong>Mengekspresikan terlalu atau sangat dengan 太 (tài)</strong></p>
-    <p class="fontGrey" id="dalamBahasa">Dalam bahasa mandarin, cara yang paling sederhana untuk mengekspresikan 
-        hal yang secara belebih-lebihan atau biasa disebut dengan kata "terlalu"
-         adalah dengan menggunakan kata 太 (tài). Perhatikan jangan lupa juga 
-         untuk menambahkan kata 了 (le) setelah kata sifat, hal ini bertujuan
-          untuk menjaga agar pengucapan bahasa mandarin terasa lebih alami.</p>
-    
-    <p class="fontBlack"><strong>Struktur</strong></p>
-    <div class="Struktur"><p class="fontBlack">太 + Adj. + 了</p></div>
-    <p class="fontBlack"><strong>Contoh</strong></p>
-    <ul>
-        <li class="fontGrey" >米饭太多了 <br> mǐfàn tài duō le <br> Nasinya terlalu banyak </li> <br>
-        <li class="fontGrey" >现在太晚了 <br> xiànzài tài wǎn le <br> Sekarang sudah terlalu malam </li> <br>
-        <li class="fontGrey" >老板太忙了 <br> lǎobǎn tài máng le <br> Si Boss terlalu sibuk </li> <br>
-        <li class="fontGrey" > 这个厕所太脏了 <br> zhege cèsuǒ tài zāng le <br> Toilet ini sangat kotor </li> <br> 
-    </ul>
+    <p class="fontBlack"><strong>Menggabungkan Kata Sifat dan Kata Benda menggunakan 很(hěn)</strong></p>
+    <p class="fontGrey">Kita sering melihat kata benda yang memiliki kata sifat, 
+        seperti kalimat "buku baru" (Buku adalah kata benda dan 
+        baru adalah kata sifat) dan masih banyak lagi. Dalam bahasa
+         mandarin kita dapat menggunakan kata benda sebagai penghubung
+          terhadap kata sifat atau kata benda dengan kata kerja.Kali ini 
+          kita akan mengenal cara menghubungkan kata benda dengan kata
+           sifat menggunakan 很(hěn).
+    </p>
 
+    <p class="fontBlack"><strong>Struktur</strong></p>
+    <div class="Struktur"><p class="fontBlack">Kata Benda + 很 + Kata Sifat</p></div>
+    <p class="fontBlack"><strong>Contoh</strong></p>
+
+    <ul>
+        <li class="fontGrey" >我很好 <br> wǒ hěn hǎo <br> Saya baik </li> <br>
+        <li class="fontGrey" >你很漂亮 <br> nǐ hěn piàoliǎng <br> Kamu sangat cantik </li> <br>
+        <li class="fontGrey" >他很高兴 <br> tā hěn gāoxìng <br> Dia sangat senang </li> <br>
+        <li class="fontGrey" > 你家也很远吗 ?  <br> nǐ jiā yě hěn yuǎn ma ? <br> Apakah rumahmu juga sangat jauh ? </li> <br>
+        <li class="fontGrey" >我哥哥也很高 <br> wǒ gēgē yě hěn gāo <br> Kakakku juga sangat tinggi </li> <br>
+    </ul>
 
     <!-- ===== Footer ===== -->
 
