--- a/basic_sentence_patterns-2.html
+++ b/basic_sentence_patterns-2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="polaKalimatDasar1.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="basic_sentence_patterns_2.css">
 </head>
 <body>
     <header>
