--- a/basic_sentence_patterns.html
+++ b/basic_sentence_patterns.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="polaKalimatDasar.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="basic_sentence_patterns.css">
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
     <!-- ===== Body ===== -->
     <div class="headerPadding"></div>
     <p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
-    <img id="background" src="Pictures/Tata Bahasa Background.jpg" alt="">
+    <img id="background" src="Pictures/Grammar Background.jpg" alt="">
     <p class="fontBlack" id="mengapaPerlu">Mengapa perlu belajar struktur kalimat dasar dan grammar dalam bahasa Mandarin?</p>
     <p class="fontGrey" id="strukturKalimat" >Struktur kalimat dalam bahasa Mandarin adalah chapter termudah untuk memulai proses adopsi bahasa asing yang satu ini. <br> Alasannya adalah:</p>
         <ul class="fontGrey" id="merupakanUl">
