--- a/grammar.html
+++ b/grammar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="tataBahasa.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="grammar.css">
 </head>
 <body>
     <header>
