--- a/vocab_HSK1_3.html
+++ b/vocab_HSK1_3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kosakata</title>
-    <link rel="stylesheet" href="kosakataHSK1_3.css">
+    <title>Vocabulary</title>
+    <link rel="stylesheet" href="voacb_HSK1_3.css">
 </head>
 <body>
     <header>
