--- a/vocab_HSK3_6.html
+++ b/vocab_HSK3_6.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kosakata</title>
-    <link rel="stylesheet" href="kosakataHSK3_1.css">
+    <title>Vocabulary</title>
+    <link rel="stylesheet" href="vocab_HSK3_1.css">
 </head>
 <body>
     <header>
@@ -19,13 +19,13 @@
             <a class="navbarPaddingLeft" href="index.html">Home        </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
 
     <!-- ===== Body ===== -->
-    <a href="kosakata.html" class=" fontBlack"> <button class="pilihHSK"> <span class="pilihHSKA">Pilih HSK</span> </button>  </a>
+    <a href="vocab.html" class=" fontBlack"> <button class="pilihHSK"> <span class="pilihHSKA">Pilih HSK</span> </button>  </a>
 <div class="headerPadding"></div>
 
 <!-- <center>
