--- a/words_with_shi.html
+++ b/words_with_shi.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tata Bahasa</title>
-    <link rel="stylesheet" href="kataBendaSifat.css">
+    <title>Grammar</title>
+    <link rel="stylesheet" href="words_with_shi.css">
 </head>
 <body>
 
@@ -28,29 +28,27 @@
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
 <p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
-<img id="background" src="Pictures/Tata Bahasa Background.jpg" alt="">
+<img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-    <p class="fontBlack"><strong>Menggabungkan Kata Sifat dan Kata Benda menggunakan 很(hěn)</strong></p>
-    <p class="fontGrey">Kita sering melihat kata benda yang memiliki kata sifat, 
-        seperti kalimat "buku baru" (Buku adalah kata benda dan 
-        baru adalah kata sifat) dan masih banyak lagi. Dalam bahasa
-         mandarin kita dapat menggunakan kata benda sebagai penghubung
-          terhadap kata sifat atau kata benda dengan kata kerja.Kali ini 
-          kita akan mengenal cara menghubungkan kata benda dengan kata
-           sifat menggunakan 很(hěn).
-    </p>
+<p class="fontBlack" id="menghubungkanKata">Menghubungkan kata benda dengan 是 (shì)</p>
+<p class="fontGrey" id="shiMerupakan">是 | shì merupakan kata kerja dan dipergunakan untuk 
+menghubungkan dua kata benda, dalam bahasa Indonesia 
+sering diterjemahkan sebagai adalah.</p>
 
-    <p class="fontBlack"><strong>Struktur</strong></p>
-    <div class="Struktur"><p class="fontBlack">Kata Benda + 很 + Kata Sifat</p></div>
-    <p class="fontBlack"><strong>Contoh</strong></p>
-
-    <ul>
-        <li class="fontGrey" >我很好 <br> wǒ hěn hǎo <br> Saya baik </li> <br>
-        <li class="fontGrey" >你很漂亮 <br> nǐ hěn piàoliǎng <br> Kamu sangat cantik </li> <br>
-        <li class="fontGrey" >他很高兴 <br> tā hěn gāoxìng <br> Dia sangat senang </li> <br>
-        <li class="fontGrey" > 你家也很远吗 ?  <br> nǐ jiā yě hěn yuǎn ma ? <br> Apakah rumahmu juga sangat jauh ? </li> <br>
-        <li class="fontGrey" >我哥哥也很高 <br> wǒ gēgē yě hěn gāo <br> Kakakku juga sangat tinggi </li> <br>
-    </ul>
+<p class="fontBlack"><strong>Struktur</strong></p>
+<div class="Struktur"><p class="fontBlack" id="pola1"> Kata Benda 1 + 是 + Kata Benda 2</p></div>
+<p class="fontBlack"><strong>Contoh</strong></p>
+<ul>
+    <li class="fontGrey" >我是学生。 <br> wǒ shì xuéshēng <br> Saya seorang pelajar </li>
+    <br>
+    <li class="fontGrey" >他们是有钱人。 <br> tāmen shì yǒu qián rén <br> Mereka adalah orang kaya. </li>
+    <br>
+    <li class="fontGrey" >您是老师吗？ <br> nín shì lǎoshī ma <br>  Apakah anda seorang guru ? </li>
+    <br>
+    <li class="fontGrey" >这都是你的钱。 <br> zhe dōu shì nǐ de qián  <br> Ini semua adalah uangmu. </li>
+    <br>
+    <li class="fontGrey" >我也是他的朋友。 <br> wǒ yě shì nǐ de péngyou <br> Saya juga teman dia. </li>
+</ul>
 
     <!-- ===== Footer ===== -->
 
