--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <p id="EzChineseP">
-            <a id="EzChineseImgHref" href="index.html">
+        <p id="GlowKidsP">
+            <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
-            </a>    Ez Chinese
+            </a>    Glow Kids
         </p>
         
         <p id="navBar">
@@ -27,21 +27,11 @@
 <!-- About -->
 
     <!--Div 1 -->
-        <div id="BelajarBahasaMandarinDescDiv">
-            <object align="left" data="Pictures/Bio.jpg" width="300px" height="400px" type=""></object>
-            <h1 id="BelajarBahasaMandarinH1"> Tentang Saya </h1>
-            <p id="BelajarBahasaMandarinDescP">Perkenalkan saya Dzawil Uqul, nama chinese saya adalah 哈笛 (dibaca : Hādí)
-                . Nama ini berasal dari nama terakhir ayah saya yang bernama Solikhul Hadi
-                . Nama chinese ini didapatkan dari guru saya yang bernama Miya Laoshi pada saat saya menempuh pendidikan bahasa mandarin di China pada tahun 2019.
-                
-                <br><br>
-                Saya kelahiran Desember tahun 2000. Saya tumbuh besar di kota kecil dekat pantai yang indah yaitu Kota Jepara.  
-                Pada tahun 2019 saya mendapatkan kesempatan untuk belajar mandarin di China selama 5 bulan dan dilanjutkan secara daring di Indonesia karena pandemik. 
-                Akhir bulan Oktober tahun 2020 saya menempuh ujian HSK 4 yang dilaksanakan secara daring dan Alhamdulillah saya berhasil lulus dengan nilai yang cukup memuaskan.
-
-                <br><br>
-                Alasan saya membuat website ini adalah untuk menyelesaikan tugas mata kuliah Pemrograman Berbasis Web.
-                Melalu website ini saya juga ingin membagikan ilmu yang saya dapatkan ketika saya belajar mandarin di China dan di Indonesia.
+        <div id="LearnMandarinDescDiv">
+            <object align="left" data="Pictures/ecust.jpg" width="300px" height="400px" type=""></object>
+            <h1 id="LearnMandarinH1"> About us </h1>
+            <p id="LearnMandarinDescP">
+                123
             </p>
         </div>
 
@@ -49,11 +39,11 @@
 
 <footer>
     <address>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2022 Ez Chinese</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 08123456789</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : ezchinese@gmail.com</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @ezchinese</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> EzChinese.com Jepara Tech Ltd. </p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2024 Glow Kids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 0123456789</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : glowkids@gmail.com</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @glowkids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> GlowKids.com Tech Ltd. </p>
     </address>
     </footer>
 </body>
