--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <a class="navbarPaddingLeft" href="index.html">Home        </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
