--- a/adjective_noun.html
+++ b/adjective_noun.html
@@ -10,57 +10,57 @@
 <body>
 
     <header>
-        <p id="EzChineseP">
-            <a id="EzChineseImgHref" href="index.html">
+        <p id="GlowKidsP">
+            <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
-            </a>    Ez Chinese
+            </a>    Glow Kids
         </p>
         
         <p id="navBar">
             <a class="navbarPaddingLeft" href="index.html">Home        </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
 
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
-<p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
+<p class="fontBlack" id="studyArrangement">Learn Basic Sentence Structure and Grammar in Mandarin.</p>
 <img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-    <p class="fontBlack"><strong>Menggabungkan Kata Sifat dan Kata Benda menggunakan 很(hěn)</strong></p>
-    <p class="fontGrey">Kita sering melihat kata benda yang memiliki kata sifat, 
-        seperti kalimat "buku baru" (Buku adalah kata benda dan 
-        baru adalah kata sifat) dan masih banyak lagi. Dalam bahasa
-         mandarin kita dapat menggunakan kata benda sebagai penghubung
-          terhadap kata sifat atau kata benda dengan kata kerja.Kali ini 
-          kita akan mengenal cara menghubungkan kata benda dengan kata
-           sifat menggunakan 很(hěn).
+    <p class="fontBlack"><strong>Combining nouns and adjectives using 很(hěn)</strong></p>
+    <p class="fontGrey">We often see nouns that have adjectives,
+        like the sentence "new book" (Book is a noun and
+        new is an adjective) and many more. In
+        Mandarin we can use nouns as connectors
+        against an adjective or noun with a verb.This time
+        we will know how to connect nouns with adjectives 
+        using 很(hěn).
     </p>
 
-    <p class="fontBlack"><strong>Struktur</strong></p>
-    <div class="Struktur"><p class="fontBlack">Kata Benda + 很 + Kata Sifat</p></div>
-    <p class="fontBlack"><strong>Contoh</strong></p>
+    <p class="fontBlack"><strong>Structure</strong></p>
+    <div class="Structure"><p class="fontBlack">Noun + 很 + Adjective</p></div>
+    <p class="fontBlack"><strong>Example</strong></p>
 
     <ul>
-        <li class="fontGrey" >我很好 <br> wǒ hěn hǎo <br> Saya baik </li> <br>
-        <li class="fontGrey" >你很漂亮 <br> nǐ hěn piàoliǎng <br> Kamu sangat cantik </li> <br>
-        <li class="fontGrey" >他很高兴 <br> tā hěn gāoxìng <br> Dia sangat senang </li> <br>
-        <li class="fontGrey" > 你家也很远吗 ?  <br> nǐ jiā yě hěn yuǎn ma ? <br> Apakah rumahmu juga sangat jauh ? </li> <br>
-        <li class="fontGrey" >我哥哥也很高 <br> wǒ gēgē yě hěn gāo <br> Kakakku juga sangat tinggi </li> <br>
+        <li class="fontGrey" >我很好 <br> wǒ hěn hǎo <br> I am very good </li> <br>
+        <li class="fontGrey" >你很漂亮 <br> nǐ hěn piàoliǎng <br> You are very beautiful </li> <br>
+        <li class="fontGrey" >他很高兴 <br> tā hěn gāoxìng <br> He is very happy </li> <br>
+        <li class="fontGrey" > 你家也很远吗 ?  <br> nǐ jiā yě hěn yuǎn ma ? <br> Is your house also really far ? </li> <br>
+        <li class="fontGrey" >我哥哥也很高 <br> wǒ gēgē yě hěn gāo <br> My brother is very tall </li> <br>
     </ul>
 
     <!-- ===== Footer ===== -->
 
     <footer>
         <address>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2022 Ez Chinese</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 08123456789</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : ezchinese@gmail.com</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @ezchinese</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> EzChinese.com Jepara Tech Ltd. </p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2024 Glow Kids</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 0123456789</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : glowkids@gmail.com</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @glowkids</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> GlowKids.com Tech Ltd. </p>
         </address>
     </footer>
     
