--- a/grammar.html
+++ b/grammar.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <p id="EzChineseP">
-            <a id="EzChineseImgHref" href="index.html">
+        <p id="GlowKidsP">
+            <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
-            </a>    Ez Chinese
+            </a>    GlowKids
         </p>
         
         <p id="navBar">
             <a class="navbarPaddingLeft" href="index.html">Home        </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
@@ -27,38 +27,38 @@
     <!-- Body -->
 <div class="headerPadding"></div>
 
-<p id="titleP">Struktur Tata Bahasa Dasar</p>
+<p id="titleP">Basic Sentence Patterns</p>
 
 <table class="descFont">
     <tr>
-        <th>Poin Tata Bahasa</th>
-        <th>Pola</th>
-        <th>Contoh</th>
+        <th>Grammar Points</th>
+        <th>Pattern</th>
+        <th>Example</th>
     </tr>
 
     <tr>
-        <td> <p class="paddingSubMenu"> Pola Kalimat Dasar </p>
-            <a class="subMenu" href="polaKalimatDasar.html">1. Subjek - Predikat</a> <br>
-            <a class="subMenu" href="polaKalimatDasar1.html">2. Subjek - Kata Kerja - Objek</a>
+        <td> <p class="paddingSubMenu"> Basic Sentence Patterns </p>
+            <a class="subMenu" href="basic_sentence_patterns.html">1. Subject - Predicate</a> <br>
+            <a class="subMenu" href="basic_sentence_patterns_2.html">2. Subject - Verb - Object</a>
         </td>
         <td>Subj. + Verb (+ Obj.)</td>
         <td>	我 爱 你 。</td>
     </tr>
 
     <tr>
-        <td> <a href="kataBendaDenganShi.html"> Menghubungkan kata benda dengan 是 (shì) </a></td>
+        <td> <a href="words_with_shi.html"> Connecting nouns with 是 (shì) </a></td>
         <td>	A + 是 + B</td>
         <td>	我 是 学生 。</td>
     </tr>
 
     <tr>
-        <td> <a href="berlebihanDenganTai.html"> Mengekspresikan "terlalu" atau "sangat" dengan 太 (tài) </a> </td>
+        <td> <a href="words_with_tai.html"> Expressing "too" or "very" with 太 (tài) </a> </td>
         <td>	太 + Adj. + 了</td>
         <td>	太 好 了 !</td>
     </tr>
 
     <tr>
-        <td> <a href="kataBendaSifat.html">Menggabungkan Kata Sifat dan Kata Benda <br> menggunakan 很 (hěn) </a> </td>
+        <td> <a href="adjective_noun.html">Combining Adjectives and Nouns <br> using 很 (hěn) </a> </td>
         <td>	Noun + 很 + Adj.</td>
         <td>	我 很 好。</td>
     </tr>
@@ -67,15 +67,15 @@
 <div class="paddingBottom"></div>
 
 
-    <footer>
-        <address>
-            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2022 Ez Chinese</p>
-            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 08123456789</p>
-            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : ezchinese@gmail.com</p>
-            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @ezchinese</p>
-            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> EzChinese.com Jepara Tech Ltd. </p>
-        </address>
-    </footer>
+<footer>
+    <address>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2024 Glow Kids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 0123456789</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : glowkids@gmail.com</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @glowkids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> GlowKids.com Tech Ltd. </p>
+    </address>
+</footer>
     
 </body>
 </html>
