--- a/registration.html
+++ b/registration.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <p id="EzChineseP">
-            <a id="EzChineseImgHref" href="index.html">
+        <p id="GlowKidsP">
+            <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
-            </a>    Ez Chinese
+            </a>    Glow Kids
         </p>
         
         <p id="navBar">
             <a class="navbarPaddingLeft" href="index.html">Home       </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
-            <a class="navbarPaddingLeft" href="tentang.html">About         </a>
+            <a class="navbarPaddingLeft" href="about.html">About         </a>
             <a class="navbarPaddingRightLeft" href="registration.html">Login</a>
         </p>
     </header>
@@ -34,21 +34,21 @@
         <p class="fontBlack" id="pMargin" >Registration Form</p>
         <div class="borderLine"></div>
         <div class="divLabel"> 
-            <label class="fontBlack" for="name">Nama Lengkap</label><br>
-            <input class="inputFocus" size="80" id="name" type="text" name="Nama" required>
+            <label class="fontBlack" for="name">Full Name</label><br>
+            <input class="inputFocus" size="80" id="name" type="text" name="Name" required>
         </div>
 
         <div class="divLabel"> 
-            <label class="fontBlack">Jenis Kelamin : </label><br>
-                <input size="80" id="gender" type="radio" name="Gender" value="Laki-Laki" required>
-            <label class="fontGrey">Laki - Laki</label>
-                <input size="80" id="gender" type="radio" name="Gender" value="Perempuan">
-            <label class="fontGrey">Perempuan</label>
+            <label class="fontBlack">Gender : </label><br>
+                <input size="80" id="gender" type="radio" name="Gender" value="Male" required>
+            <label class="fontGrey">Male</label>
+                <input size="80" id="gender" type="radio" name="Gender" value="Female">
+            <label class="fontGrey">Female</label>
         </div>
 
         <div class="divLabel"> 
-            <label class="fontBlack" for="age">Umur</label><br>
-            <input class="inputFocus" min="1" max="99" size="80" id="age" type="number" name="Umur" required>
+            <label class="fontBlack" for="age">Age</label><br>
+            <input class="inputFocus" min="1" max="99" size="80" id="age" type="number" name="Age" required>
         </div>
 
         
@@ -70,12 +70,12 @@
 
         <div class="divLabel"> 
             <input type="checkbox" required>
-            <label class="fontGrey" for="">Saya menyetujui segala persyaratan</label>
+            <label class="fontGrey" for="">I agree to all terms and conditions</label>
         </div>
 
         <div class="divLabel"> 
             <label for="submit"></label>
-            <input class="fontGrey" id="submitFont" type="submit" name="simpan">
+            <input class="fontGrey" id="submitFont" type="submit" name="save">
         </div>
 </div>
 
@@ -89,12 +89,12 @@
     <div class="footerPadding"></div>
     <footer>
         <address>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2022 Ez Chinese</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 08123456789</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : ezchinese@gmail.com</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @ezchinese</p>
-            <p class="footerP" > <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> EzChinese.com Jepara Tech Ltd. </p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2024 Glow Kids</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 0123456789</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : glowkids@gmail.com</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @glowkids</p>
+            <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> GlowKids.com Tech Ltd. </p>
         </address>
-        </footer>
+    </footer>
 </body>
 </html>
