--- a/courses.html
+++ b/courses.html
@@ -33,7 +33,7 @@
         <h1 id="vocabularyH1">VOCABULARY </h1>
         <p id="vocabularyDescP">GlowKids provides a vocabulary list from HSK 1 - HSK 6 accompanied by<br> 
             Pinyin and its meaning has been sorted based on the student's ability. <br><br>
-                <a href="vocabulary.html">More...</a>
+                <a href="vocab.html">More...</a>
         </p>
                 
     </div>
