update vocab hsk 1-3
come back to translation

--- a/vocab_HSK1_3.html
+++ b/vocab_HSK1_3.html
@@ -26,10 +26,10 @@
 
     <!-- ===== Body ===== -->
     
-    <a href="kosakata.html" class=" fontBlack"> <button class="pilihHSK"> <span class="pilihHSKA">Pilih HSK</span> </button>  </a>
+    <a href="vocab.html" class=" fontBlack"> <button class="pilihHSK"> <span class="selectHSKA">Select HSK</span> </button>  </a>
 <div class="headerPadding"></div>
 
-<p class="fontBlack" id="daftarKosakata">Daftar Kosakata NEW HSK 1 Part 3</p>
+<p class="fontBlack" id="vocabList">Vocabulary List NEW HSK 1 Part 3</p>
 <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <tbody><table>
@@ -140,23 +140,23 @@
 
 <p class="fontGrey" id="halamanSelanjutnya">Halaman 3 Dari 5 Halaman</p>
 <div class="pagination">
-    <a id="fontGreyPagination" href="kosakataHSK1_2.html">&laquo;</a>
-    <a id="fontGreyPagination" href="kosakataHSK1_1.html">1</a>
-    <a id="fontGreyPagination" href="kosakataHSK1_2.html">2</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_2.html">&laquo;</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_1.html">1</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_2.html">2</a>
     <a id="fontGreyPagination" class="active" href="#" onclick="return false">3</a>
-    <a id="fontGreyPagination" href="kosakataHSK1_4.html">4</a>
-    <a id="fontGreyPagination" href="kosakataHSK1_5.html">5</a>
-    <a id="fontGreyPagination" href="kosakataHSK1_4.html">&raquo;</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_4.html">4</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_5.html">5</a>
+    <a id="fontGreyPagination" href="vocab_HSK1_4.html">&raquo;</a>
   </div>
 
 
-<footer>
+  <footer>
     <address>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2022 Ez Chinese</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 08123456789</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : ezchinese@gmail.com</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @ezchinese</p>
-        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> EzChinese.com Jepara Tech Ltd. </p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-copyright-all-rights-reserved-24.png" width="20px" height="20px" alt=""> </object> 2024 Glow Kids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-phone-50 (1).png" width="20px" height="20px" alt=""></object> Phone : 0123456789</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-mail-50.png"      width="20px" height="20px" alt=""></object> E-mail : glowkids@gmail.com</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-instagram-24.png" width="20px" height="20px" alt=""></object> Instagram : @glowkids</p>
+        <p class="footerP"> <object class="footerIcon" align = "center" data ="Icons/icons8-internet-30.png"  width="20px" height="20px" alt=""></object> GlowKids.com Tech Ltd. </p>
     </address>
 </footer>
 </body>
