--- a/vocab_HSK1_3.html
+++ b/vocab_HSK1_3.html
@@ -26,7 +26,7 @@
 
     <!-- ===== Body ===== -->
     
-    <a href="vocab.html" class=" fontBlack"> <button class="pilihHSK"> <span class="selectHSKA">Select HSK</span> </button>  </a>
+    <a href="vocab.html" class=" fontBlack"> <button class="selectHSK"> <span class="selectHSKA">Select HSK</span> </button>  </a>
 <div class="headerPadding"></div>
 
 <p class="fontBlack" id="vocabList">Vocabulary List NEW HSK 1 Part 3</p>
