--- a/vocab_HSK1_2.html
+++ b/vocab_HSK1_2.html
@@ -136,7 +136,7 @@
 
 </tbody></table>
 
-<p class="fontGrey" id="halamanSelanjutnya">Page 2 out of 5 Pages</p>
+<p class="fontGrey" id="nextPage">Page 2 out of 5 Pages</p>
 <div class="pagination">
     <a id="fontGreyPagination" href="vocab_HSK1_1.html">&laquo;</a>
     <a id="fontGreyPagination" href="vocab_HSK1_1.html">1</a>
