--- a/vocab_HSK1_3.html
+++ b/vocab_HSK1_3.html
@@ -33,7 +33,7 @@
 <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <tbody><table>
-    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Arti</td></tr>
+    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
     <tr><td>201</td><td>课文</td><td>Kèwén</td><td>Text</td></tr>
     <tr><td>202</td><td>口</td><td>Kǒu</td><td>Mouth</td></tr>
     <tr><td>203</td><td>块</td><td>Kuài</td><td>Piece</td></tr>
