--- a/vocab_HSK1_1.html
+++ b/vocab_HSK1_1.html
@@ -34,7 +34,7 @@
     <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 <tbody><table>
-    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Arti</td></tr>
+    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
 <tr><td>1</td><td>爱</td><td>Ài</td><td>Love</td></tr>
 <tr><td>2</td><td>爱好</td><td>Àihào</td><td>Hobby</td></tr>
 <tr><td>3</td><td>八</td><td>Bā</td><td>Eight</td></tr>
