--- a/vocab_HSK1_2.html
+++ b/vocab_HSK1_2.html
@@ -32,7 +32,7 @@
 <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <tbody><table>
-    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Arti</td></tr>
+    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
 <tr><td>101</td><td>房间</td><td>Fángjiān</td><td>Room</td></tr>
 <tr><td>102</td><td>房子</td><td>Fángzi</td><td>House</td></tr>
 <tr><td>103</td><td>放</td><td>Fàng</td><td>Put</td></tr>
