--- a/vocab_HSK1_4.html
+++ b/vocab_HSK1_4.html
@@ -32,7 +32,7 @@
 <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <tbody><table>
-    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Arti</td></tr>
+    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
     <tr><td>301</td><td>球</td><td>Qiú</td><td>Ball</td></tr>
     <tr><td>302</td><td>去</td><td>Qù</td><td>Go</td></tr>
     <tr><td>303</td><td>去年</td><td>Qùnián</td><td>Last year</td></tr>
