--- a/vocab_HSK1_5.html
+++ b/vocab_HSK1_5.html
@@ -32,7 +32,7 @@
 <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/szbojtoXnjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <tbody><table>
-    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Arti</td></tr>
+    <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
     <tr><td>401</td><td>小</td><td>Xiǎo</td><td>Small</td></tr>
     <tr><td>402</td><td>小孩儿</td><td>Xiǎo hái’ér</td><td>Small kid</td></tr>
     <tr><td>403</td><td>小姐</td><td>Xiǎojiě</td><td>Miss</td></tr>
