--- a/vocab_HSK1_5.html
+++ b/vocab_HSK1_5.html
@@ -137,7 +137,7 @@
 
 </tbody></table>
 
-<p class="fontGrey" id="halamanSelanjutnya">Page 5 out of 5 Pages</p>
+<p class="fontGrey" id="nextPage">Page 5 out of 5 Pages</p>
 <div class="pagination">
     <a id="fontGreyPagination" href="vocab_HSK1_4.html">&laquo;</a>
     <a id="fontGreyPagination" href="vocab_HSK1_1.html">1</a>
