--- a/index.html
+++ b/index.html
@@ -99,6 +99,35 @@
 
     <div id="lineCourses"></div>
 
+<!-- Videos -->
+
+<h1 id="vidH1">Videos</h1>
+
+<div id="VideoDescDiv">
+        <div id="VidImgDiv">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid1.jpg" alt="">
+                <p class="vidDescP">This video is about...
+                </p>
+            </div>
+
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid2.jpg" alt="">
+                <p class="vidDescP">This video is about... 
+                </p>
+
+            </div>
+
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid3.jpg" alt="">
+                <p class="vidDescP">This video is about...
+                </p>
+            </div>
+            
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid4.jpg" alt="">
+                <p class="vidDescP">This video is about...
+                </p>
+            </div>
+        </div>
+</div>
+
 <!-- Footer -->
 
 <footer>
