--- a/superQuiz.html
+++ b/superQuiz.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Quiz</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="superQuiz.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
         </p>
         
         <p id="navBar">
-            <a class="navbarPaddingLeft" href="index.html">Home        </a>
+            <a class="navbarPaddingLeft" href="index.html">Home       </a>
             <a class="navbarPaddingLeft" href="courses.html">Courses       </a>
             <a class="navbarPaddingLeft" href="superQuiz.html">Super Quiz       </a>
             <a class="navbarPaddingLeft" href="about.html">About         </a>
@@ -30,7 +31,7 @@
         <p id="landingP" class="fontBlack">Welcome to Super Quiz</p>
         <p id="landingP2" class="fontGrey">Practice Questions Based on the Original Exam</p>
         <button class="startButton fontBlack" onclick="startFunc()">Start</button>
-        <img id="background" src="Pictures/Tata Bahasa Background.jpg" alt="">
+        <img id="background" src="Pictures/Grammar Background.jpg" alt="">
     </div>
     <div class="sideBar passDiv">
             <div class="dropdown">
