--- a/superQuizListening.html
+++ b/superQuizListening.html
@@ -13,7 +13,7 @@
     <header>
         <p id="GlowKidsP">
             <a id="GlowKidsImgHref" href="index.html">
-                <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
+                <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
             </a>    Glow Kids
         </p>
         
