--- a/vocab_HSK2_5.html
+++ b/vocab_HSK2_5.html
@@ -11,7 +11,7 @@
     <header>
         <p id="Glow KidsP">
             <a id="Glow KidsImgHref" href="index.html">
-                <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
+                <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
             </a>    Glow Kids
         </p>
         
