--- a/vocab_HSK2_2.html
+++ b/vocab_HSK2_2.html
@@ -11,7 +11,7 @@
     <header>
         <p id="GlowKidsP">
             <a id="GlowKidsImgHref" href="index.html">
-                <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
+                <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
             </a>    GLow Kids
         </p>
         
