--- a/words_with_tai.html
+++ b/words_with_tai.html
@@ -12,7 +12,7 @@
     <header>
         <p id="EzChineseP">
             <a id="EzChineseImgHref" href="index.html">
-                <object align="center" width="140px" height="110px" data="Pictures/Billy In Hat.png"></object>
+                <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
             </a>    Ez Chinese
         </p>
         
