update words with xx

--- a/words_with_shi.html
+++ b/words_with_shi.html
@@ -27,27 +27,27 @@
 
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
-<p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
+<p class="fontBlack" id="learnArr">Learn Basic Sentence Structure <br> and Grammar in Mandarin</p>
 <img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-<p class="fontBlack" id="menghubungkanKata">Menghubungkan kata benda dengan 是 (shì)</p>
-<p class="fontGrey" id="shiMerupakan">是 | shì merupakan kata kerja dan dipergunakan untuk 
-menghubungkan dua kata benda, dalam bahasa Indonesia 
-sering diterjemahkan sebagai adalah.</p>
+<p class="fontBlack" id="connectWord">Connecting nouns with 是 (shì)</p>
+<p class="fontGrey" id="shiForm">是 | shì is a verb and is used to
+    connect two nouns. In English it is
+    often translated as "is".</p>
 
-<p class="fontBlack"><strong>Struktur</strong></p>
-<div class="Struktur"><p class="fontBlack" id="pola1"> Kata Benda 1 + 是 + Kata Benda 2</p></div>
-<p class="fontBlack"><strong>Contoh</strong></p>
+<p class="fontBlack"><strong>Structure</strong></p>
+<div class="Structure"><p class="fontBlack" id="pola1"> Noun 1 + 是 + Noun 2</p></div>
+<p class="fontBlack"><strong>Example</strong></p>
 <ul>
-    <li class="fontGrey" >我是学生。 <br> wǒ shì xuéshēng <br> Saya seorang pelajar </li>
+    <li class="fontGrey" >我是学生。 <br> wǒ shì xuéshēng <br> I am a student </li>
     <br>
-    <li class="fontGrey" >他们是有钱人。 <br> tāmen shì yǒu qián rén <br> Mereka adalah orang kaya. </li>
+    <li class="fontGrey" >他们是有钱人。 <br> tāmen shì yǒu qián rén <br> They are rich people. </li>
     <br>
-    <li class="fontGrey" >您是老师吗？ <br> nín shì lǎoshī ma <br>  Apakah anda seorang guru ? </li>
+    <li class="fontGrey" >您是老师吗？ <br> nín shì lǎoshī ma <br>  Are you a teacher ? </li>
     <br>
-    <li class="fontGrey" >这都是你的钱。 <br> zhe dōu shì nǐ de qián  <br> Ini semua adalah uangmu. </li>
+    <li class="fontGrey" >这都是你的钱。 <br> zhe dōu shì nǐ de qián  <br> This is all your money. </li>
     <br>
-    <li class="fontGrey" >我也是他的朋友。 <br> wǒ yě shì nǐ de péngyou <br> Saya juga teman dia. </li>
+    <li class="fontGrey" >我也是他的朋友。 <br> wǒ yě shì nǐ de péngyou <br> I am also his friend. </li>
 </ul>
 
     <!-- ===== Footer ===== -->
