--- a/words_with_tai.html
+++ b/words_with_tai.html
@@ -27,24 +27,24 @@
 
     <!-- ===== Body ===== -->
 <div class="headerPadding"></div>
-<p class="fontBlack" id="belajarSusunan">Belajar Susunan Kalimat Dasar <br> Dan Grammar Dalam Bahasa Mandarin</p>
+<p class="fontBlack" id="learnArr">Learn Basic Sentence Structure <br> and Grammar in Mandarin</p>
 <img id="background" src="Pictures/Grammar Background.jpg" alt="">
 <div class="headerPadding"></div>
-    <p class="fontBlack" id="mengekspresikan"><strong>Mengekspresikan terlalu atau sangat dengan 太 (tài)</strong></p>
-    <p class="fontGrey" id="dalamBahasa">Dalam bahasa mandarin, cara yang paling sederhana untuk mengekspresikan 
-        hal yang secara belebih-lebihan atau biasa disebut dengan kata "terlalu"
-         adalah dengan menggunakan kata 太 (tài). Perhatikan jangan lupa juga 
-         untuk menambahkan kata 了 (le) setelah kata sifat, hal ini bertujuan
-          untuk menjaga agar pengucapan bahasa mandarin terasa lebih alami.</p>
+    <p class="fontBlack" id="express"><strong>Expressing too or very with 太 (tài)</strong></p>
+    <p class="fontGrey" id="lang">In Mandarin, the simplest way to express
+        things that are excessive is to use the word 太 (tài). 
+        Don't forget to pay attention
+        to add the word 了 (le) after an adjective, this is purposeful
+        to keep Mandarin pronunciation feeling more natural.</p>
     
-    <p class="fontBlack"><strong>Struktur</strong></p>
-    <div class="Struktur"><p class="fontBlack">太 + Adj. + 了</p></div>
-    <p class="fontBlack"><strong>Contoh</strong></p>
+    <p class="fontBlack"><strong>Structure</strong></p>
+    <div class="Structure"><p class="fontBlack">太 + Adj. + 了</p></div>
+    <p class="fontBlack"><strong>Example</strong></p>
     <ul>
-        <li class="fontGrey" >米饭太多了 <br> mǐfàn tài duō le <br> Nasinya terlalu banyak </li> <br>
-        <li class="fontGrey" >现在太晚了 <br> xiànzài tài wǎn le <br> Sekarang sudah terlalu malam </li> <br>
-        <li class="fontGrey" >老板太忙了 <br> lǎobǎn tài máng le <br> Si Boss terlalu sibuk </li> <br>
-        <li class="fontGrey" > 这个厕所太脏了 <br> zhege cèsuǒ tài zāng le <br> Toilet ini sangat kotor </li> <br> 
+        <li class="fontGrey" >米饭太多了 <br> mǐfàn tài duō le <br> Too much rice</li> <br>
+        <li class="fontGrey" >现在太晚了 <br> xiànzài tài wǎn le <br> It's too late now </li> <br>
+        <li class="fontGrey" >老板太忙了 <br> lǎobǎn tài máng le <br> The boss is too busy </li> <br>
+        <li class="fontGrey" > 这个厕所太脏了 <br> zhege cèsuǒ tài zāng le <br> This toilet is too dirty </li> <br> 
     </ul>
 
 
